[package]
name = "archiver"
version = "1.0.6"
authors = ["Assistant"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.20"
clap = { version = "3.2.14", features = ["derive"] }
clap_complete_command = "0.3.4"
colored = "2.0.0"
derive_more = { version = "0.99.17", default-features = false, features = ["constructor"] }
directories = "4.0.1"
lazy_static = "1.4.0"
regex = "1.6.0"
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
terminal-spinners = "0.3.2"
toml = "0.5.9"
which = "4.3.0"

[profile.release]
strip = true
lto = true
