[package]
name = "archiver"
version = "1.1.1"
description = "Tool to easily archive streams with chat and metadata."
homepage = "https://github.com/Assistant/archiver"
authors = ["Assistant"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.20"
clap = { version = "3.2.14", features = ["derive"] }
clap_complete_command = "0.3.4"
clap_mangen = "0.1.11"
colored = "2.0.0"
derive_more = { version = "0.99.17", default-features = false, features = ["constructor"] }
directories = "4.0.1"
fancy-regex = "0.14.0"
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
shell-escape = "0.1.5"
strfmt = "0.2.4"
terminal-spinners = "0.3.2"
toml = "0.5.9"
unicode-general-category = "1.0.0"
unicode-normalization = "0.1.24"
which = "4.3.0"

[build-dependencies]
clap = { version = "3.2.14", features = ["derive"] }
clap_complete_command = "0.3.4"
clap_mangen = "0.1.11"

[profile.release]
strip = true
lto = true
